--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+  "name": "insta_clone",
+  "description": "instagram clone ",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ziedak/Insta_Clone.git"
+  },
+  "keywords": [],
+  "author": "Zied Akremi",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ziedak/Insta_Clone/issues"
+  },
+  "homepage": "https://github.com/ziedak/Insta_Clone",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,15 +24,18 @@
     "@tailwindcss/forms": "^0.4.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.5",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
