--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "firebase": "^9.6.6",
@@ -27,6 +28,7 @@
     "next-auth": "^4.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recoil": "^0.6.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
