--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "firebase": "^9.6.6",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "next": "latest",
     "next-auth": "^4.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "recoil": "^0.6.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
